# Hackathon-2-TodoAap

phase-01/: .gitignore  CLAUDE.md  How to Run Project.txt  README.md  plan.md  pyproject.toml  tasks.md  test_cli_enhancements.py  test_view_functionality.py
phase-01/.claude/: settings.local.json
phase-01/docs/: usage.md
phase-01/specs_history/: spec.md
phase-01/src/todo_app/: __init__.py  __main__.py  cli.py  main.py  models.py  todo_manager.py
phase-01/tests/: test_todo.py
phase-02/: .gitignore  ADVANCED_FEATURES_STATUS.md  CHECK_TOKEN_ISSUE.md  CLAUDE.md  FIXES_APPLIED.md  How to Run Project.txt
phase-02/.claude/: settings.local.json
phase-02/agents/: QUICK_REFERENCE.md  README.md
phase-02/backend/: requirements-prod.txt  todo.db
phase-02/frontend/: package.json  tailwind.config.ts
phase-02/specs/: implementation.md  spec.md
phase-03/: .gitignore  CLAUDE.md  DEBUG_FAILED_FETCH.md  DEBUG_GUIDE.md  FRONTEND_UI_NEXT_STEPS.md  How to Run Project.md  How to Run Project.txt  LICENSE  README.md  backend_err_2.txt  backend_err_3.txt  backend_err_4.txt  backend_err_5.txt  backend_err_6.txt  backend_log_2.txt  backend_log_3.txt  backend_log_4.txt  backend_log_5.txt  backend_log_6.txt  debug_patterns.py  test_agent.py  test_agent_automated.py  test_agent_simple.py  test_endpoint_directly.py  test_todo_agent.py
phase-03/.claude/: settings.local.json
phase-03/backend/: CLAUDE.md  requirements-dev.txt  todo.db  update_schema.py  update_sqlite_schema.py
phase-03/frontend/: CLAUDE.md  package-lock.json
phase-03/specs/: plan.md  tasks.md
(+124 files in other folders)
